force-app/main/default/objects/Account/fields/Account_category__c.field-meta.xml
<CustomField>
    <fullName>Account_category__c</fullName>
    <label>Account category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Account</fullName>
            </value>
            <value>
                <fullName>Commercial Account</fullName>
                <default>true</default>
                <label>Commercial Account</label>
            </value>
            <value>
                <fullName>Hoster Account - Do not Sell</fullName>
            </value>
            <value>
                <fullName>PSU Account</fullName>
            </value>
            <value>
                <fullName>GOVT Account</fullName>
                <label>Govt Account</label>
            </value>
            <value>
                <fullName>Partner Account</fullName>
            </value>
            <value>
                <fullName>Business Development Account</fullName>
            </value>
            <value>
                <fullName>Global Account</fullName>
            </value>
            <value>
                <fullName>HyperScaler Account</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
                <isActive>false</isActive>
                <label>Coverage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>