force-app/main/default/objects/Account/fields/Account_Number_SIT__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_SIT__c</fullName>
    <formula>TEXT(VALUE(Account_Number__c) + 10000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2bDel_Account Number SIT</label>
    <type>Text</type>
</CustomField>