force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>[GG] This field will be pushed to backed application instead of Type as the Backend application needs Type as PARTNER if Partner Type is populated</description>
    <formula>If(
 ISBLANK(PartnerType__c),TEXT(Type),
  If(TEXT(Type)=&quot;Customer&quot;,&quot;Customer&quot;,&quot;Partner&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>