force-app/main/default/objects/Account/fields/AccountId_18char__c.field-meta.xml
<CustomField>
    <fullName>AccountId_18char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>AccountId_18char</label>
    <type>Text</type>
</CustomField>