force-app/main/default/objects/Account/fields/Address_Contact_Synced__c.field-meta.xml
<CustomField>
    <fullName>Address_Contact_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be deleted - Gets checked when addresses and contacts are synced once (on account sync) To</description>
    <inlineHelpText>Field to be deleted</inlineHelpText>
    <label>2del Address Contacts Synced</label>
    <type>Checkbox</type>
</CustomField>