force-app/main/default/objects/Account/fields/Address_Count__c.field-meta.xml
<CustomField>
    <fullName>Address_Count__c</fullName>
    <label>Address Count</label>
    <summaryForeignKey>Address__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>