force-app/main/default/objects/Account/fields/Address_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_External_Id__c</fullName>
    <label>Address External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>