force-app/main/default/objects/Account/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>