force-app/main/default/objects/Account/fields/Address_Proof_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Address_Proof_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Proof Uploaded?</label>
    <type>Checkbox</type>
</CustomField>