force-app/main/default/objects/Account/fields/Annual_IT_Budget_in_crores__c.field-meta.xml
<CustomField>
    <fullName>Annual_IT_Budget_in_crores__c</fullName>
    <label>Annual IT Budget in crores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>