force-app/main/default/objects/Account/fields/Any_DR_BCP_Automation_Replication__c.field-meta.xml
<CustomField>
    <fullName>Any_DR_BCP_Automation_Replication__c</fullName>
    <label>Any DR / BCP Automation / Replication?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>