force-app/main/default/objects/Account/fields/Any_GPU_Workloads_HPC_or_AI_ML__c.field-meta.xml
<CustomField>
    <fullName>Any_GPU_Workloads_HPC_or_AI_ML__c</fullName>
    <label>Any GPU Workloads - HPC or AI/ML</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>