force-app/main/default/objects/Account/fields/Any_Orchestrator_Provisioning_Platform__c.field-meta.xml
<CustomField>
    <fullName>Any_Orchestrator_Provisioning_Platform__c</fullName>
    <inlineHelpText>Please specify Orchestrator / Provisioning Platform</inlineHelpText>
    <label>Orchestrator/Provisioning Platform</label>
    <length>200</length>
    <type>Text</type>
</CustomField>