force-app/main/default/objects/Account/fields/Application_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Application_Operating_System__c</fullName>
    <label>Application Operating System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intel - Windows</fullName>
            </value>
            <value>
                <fullName>Intel - Linux</fullName>
            </value>
            <value>
                <fullName>AIX</fullName>
            </value>
            <value>
                <fullName>Solaris</fullName>
            </value>
            <value>
                <fullName>HP-UX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>