force-app/main/default/objects/Account/fields/application_platforms__c.field-meta.xml
<CustomField>
    <fullName>application_platforms__c</fullName>
    <label>Application Platforms?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP HANA</fullName>
            </value>
            <value>
                <fullName>SAP ECC</fullName>
            </value>
            <value>
                <fullName>SAP B1</fullName>
            </value>
            <value>
                <fullName>Oracle EBS</fullName>
            </value>
            <value>
                <fullName>Infor</fullName>
            </value>
            <value>
                <fullName>HRMS</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Mail Messaging</fullName>
            </value>
            <value>
                <fullName>PLM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>