force-app/main/default/objects/Account/fields/Are_you_using_any_Orchestrator_Provisi__c.field-meta.xml
<CustomField>
    <fullName>Are_you_using_any_Orchestrator_Provisi__c</fullName>
    <label>Are you using Orchestrator/Provisioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>