force-app/main/default/objects/Account/fields/Asset_Management_Platform_HardCat_IBM_M__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Platform_HardCat_IBM_M__c</fullName>
    <label>Asset Management Tool(HardCat/IBM Maximo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>