force-app/main/default/objects/Account/fields/asset_management_tool_yes__c.field-meta.xml
<CustomField>
    <fullName>asset_management_tool_yes__c</fullName>
    <inlineHelpText>Asset Management Tool(HardCat / IBM Maximo)?</inlineHelpText>
    <label>If Asset Management Tool is yes</label>
    <type>TextArea</type>
</CustomField>