force-app/main/default/objects/Account/fields/Authoritative_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authoritative_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authoritative Signatory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>