force-app/main/default/objects/Account/fields/BD_Manager__c.field-meta.xml
<CustomField>
    <fullName>BD_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BD_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>