force-app/main/default/objects/Account/fields/BD_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>BD_Next_Steps__c</fullName>
    <label>BD Next Steps</label>
    <type>TextArea</type>
</CustomField>