force-app/main/default/objects/Account/fields/Become_Customer_On__c.field-meta.xml
<CustomField>
    <fullName>Become_Customer_On__c</fullName>
    <label>Become Customer On</label>
    <type>DateTime</type>
</CustomField>