force-app/main/default/objects/Account/fields/Billing_Address_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Count__c</fullName>
    <label>Billing Address Count</label>
    <summaryFilterItems>
        <field>Address__c.Check_Billing_Type__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Address__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>