force-app/main/default/objects/Account/fields/Business_Development_Stage__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Stage__c</fullName>
    <label>Business Development Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Research</fullName>
            </value>
            <value>
                <fullName>Reach Out</fullName>
            </value>
            <value>
                <fullName>1st Meet Done</fullName>
            </value>
            <value>
                <fullName>Yotta Capability Workshop</fullName>
            </value>
            <value>
                <fullName>BU/Product Specific Workshop</fullName>
            </value>
            <value>
                <fullName>Leadership Connect Planned</fullName>
            </value>
            <value>
                <fullName>Partner Connect Planned</fullName>
            </value>
            <value>
                <fullName>YCIC Connect Planned</fullName>
            </value>
            <value>
                <fullName>Cold/Dormat Account</fullName>
            </value>
            <value>
                <fullName>Lead/Opportunity in process</fullName>
            </value>
            <value>
                <fullName>Handed over to region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>