force-app/main/default/objects/Account/fields/Certificate_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incorporation__c</fullName>
    <label>Certificate of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>