force-app/main/default/objects/Account/fields/Contains_Addresses_and_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contains_Addresses_and_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be deleted</description>
    <label>2del Contains Addresses and Contacts</label>
    <type>Checkbox</type>
</CustomField>