force-app/main/default/objects/Account/fields/Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created a flag for the End User Type of Account which captures if their contracts are Approved.</description>
    <label>Contract Approved ( End User)</label>
    <type>Checkbox</type>
</CustomField>