force-app/main/default/objects/Account/fields/Converted_Account__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted Account</label>
    <type>Checkbox</type>
</CustomField>