force-app/main/default/objects/Account/fields/Converted_from_lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_lead_Id__c</fullName>
    <label>Converted from lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>