force-app/main/default/objects/Account/fields/Count_Of_Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Technical_Contact__c</fullName>
    <label>Count Of Technical Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>