force-app/main/default/objects/Account/fields/Count_Of_Tier_1_Authority_Level__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Tier_1_Authority_Level__c</fullName>
    <label>Count Of Tier 1 Authority Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>