force-app/main/default/objects/Account/fields/Current_IT_application_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Current_IT_application_Set_up__c</fullName>
    <label>Current IT / application Set up</label>
    <type>TextArea</type>
</CustomField>