force-app/main/default/objects/Account/fields/Cyber_Security_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Security_Solutions__c</fullName>
    <label>Cyber Security Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIEM</fullName>
            </value>
            <value>
                <fullName>DDoS</fullName>
            </value>
            <value>
                <fullName>WAF/WAAP</fullName>
            </value>
            <value>
                <fullName>SOC</fullName>
            </value>
            <value>
                <fullName>PAM</fullName>
            </value>
            <value>
                <fullName>PIM</fullName>
            </value>
            <value>
                <fullName>VAPT</fullName>
            </value>
            <value>
                <fullName>IDPS/IPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>