force-app/main/default/objects/Account/fields/Cyber_Security_Solutions_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Security_Solutions_Deployment__c</fullName>
    <label>Cyber Security Solutions Deployment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>SaaS - Hyperscaler</fullName>
            </value>
            <value>
                <fullName>SaaS - Indian Cloud Provider</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>