force-app/main/default/objects/Account/fields/Database_Backup_if_any__c.field-meta.xml
<CustomField>
    <fullName>Database_Backup_if_any__c</fullName>
    <label>Database Backup if any</label>
    <type>TextArea</type>
</CustomField>