force-app/main/default/objects/Account/fields/Databases__c.field-meta.xml
<CustomField>
    <fullName>Databases__c</fullName>
    <label>Databases?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>MySQL</fullName>
            </value>
            <value>
                <fullName>MSSQL</fullName>
            </value>
            <value>
                <fullName>PostgreSQL</fullName>
            </value>
            <value>
                <fullName>MongoDB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>