force-app/main/default/objects/Account/fields/Do_you_have_any_HCI_Workload__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_HCI_Workload__c</fullName>
    <label>Do you have any HCI Workload?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>