force-app/main/default/objects/Account/fields/Does_your_users_work_in_shifts__c.field-meta.xml
<CustomField>
    <fullName>Does_your_users_work_in_shifts__c</fullName>
    <label>Does your users work in shifts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>