force-app/main/default/objects/Account/fields/Draft_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Draft_Order_Count__c</fullName>
    <description>Count of opportunities with stage &quot;Draft Order&quot; to check if KYC approval is needed</description>
    <label>Draft Order Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Draft Order</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>