force-app/main/default/objects/Account/fields/Endpoint_Backup__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Backup__c</fullName>
    <label>Endpoint Backup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>