force-app/main/default/objects/Account/fields/Endpoint_Backup_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Backup_Deployment__c</fullName>
    <label>Endpoint Backup Deployment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>SaaS-Hyperscaler</fullName>
            </value>
            <value>
                <fullName>SaaS-Indian Cloud Provider</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>