force-app/main/default/objects/Account/fields/Existing_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Name__c</fullName>
    <description>Account Existing Name</description>
    <label>Existing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>