force-app/main/default/objects/Account/fields/Graphic_Workstation_for_AutoCAD_VFX__c.field-meta.xml
<CustomField>
    <fullName>Graphic_Workstation_for_AutoCAD_VFX__c</fullName>
    <label>Graphic Workstation for (AutoCAD/VFX)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>