force-app/main/default/objects/Account/fields/Growth_Potential_of_the_Org_for_Yotta__c.field-meta.xml
<CustomField>
    <fullName>Growth_Potential_of_the_Org_for_Yotta__c</fullName>
    <label>Growth Potential of the Org for Yotta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Potential /Low revenue share</fullName>
            </value>
            <value>
                <fullName>High Potential /High revenue share</fullName>
            </value>
            <value>
                <fullName>Low Potential /Low revenue share</fullName>
            </value>
            <value>
                <fullName>Low Potential /High revenue share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>