force-app/main/default/objects/Account/fields/GWS_deployment__c.field-meta.xml
<CustomField>
    <fullName>GWS_deployment__c</fullName>
    <label>Graphic Workstation deployment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Workstations - OnPremise</fullName>
            </value>
            <value>
                <fullName>Using Hyperscaler</fullName>
            </value>
            <value>
                <fullName>Indian Cloud Provider</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>