force-app/main/default/objects/Account/fields/Hardware_Network_Security__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Network_Security__c</fullName>
    <label>Hardware - Network/Security</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Juniper</fullName>
            </value>
            <value>
                <fullName>Fortinet</fullName>
            </value>
            <value>
                <fullName>Palo Alto</fullName>
            </value>
            <value>
                <fullName>F5</fullName>
            </value>
            <value>
                <fullName>Sophos</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>