force-app/main/default/objects/Account/fields/Hardware_Servers__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Servers__c</fullName>
    <label>Hardware - Servers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>SUN/Oracle</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>SuperMicro</fullName>
            </value>
            <value>
                <fullName>Local Assembled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>