force-app/main/default/objects/Account/fields/How_do_you_access_public_cloud_workload__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_access_public_cloud_workload__c</fullName>
    <label>How do you access public cloud workload?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet bandwidth</fullName>
            </value>
            <value>
                <fullName>AWS - DirectConnect</fullName>
            </value>
            <value>
                <fullName>Azure - ExpressRoute</fullName>
            </value>
            <value>
                <fullName>Oracle - FastConnect</fullName>
            </value>
            <value>
                <fullName>GCP - Interconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>