force-app/main/default/objects/Account/fields/Identity_Proof_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Identity_Proof_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity Proof Uploaded?</label>
    <type>Checkbox</type>
</CustomField>