force-app/main/default/objects/Account/fields/If_DR_BCP_Replication_Automation_is_Yes__c.field-meta.xml
<CustomField>
    <fullName>If_DR_BCP_Replication_Automation_is_Yes__c</fullName>
    <label>If DR,BCP Replication/Automation is Yes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>