force-app/main/default/objects/Account/fields/If_Endpoint_Backup_is_present__c.field-meta.xml
<CustomField>
    <fullName>If_Endpoint_Backup_is_present__c</fullName>
    <label>If Endpoint Backup is present</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metallic - Commvault</fullName>
            </value>
            <value>
                <fullName>Druva</fullName>
            </value>
            <value>
                <fullName>Veeam</fullName>
            </value>
            <value>
                <fullName>Carbonite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>