force-app/main/default/objects/Account/fields/If_GPU_Workload_Yes__c.field-meta.xml
<CustomField>
    <fullName>If_GPU_Workload_Yes__c</fullName>
    <label>If GPU Workloads present</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnPremise</fullName>
            </value>
            <value>
                <fullName>Using Hyperscaler</fullName>
            </value>
            <value>
                <fullName>Indian Cloud Provider</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>