force-app/main/default/objects/Account/fields/If_ILL_links_count_vendor_capacity__c.field-meta.xml
<CustomField>
    <fullName>If_ILL_links_count_vendor_capacity__c</fullName>
    <inlineHelpText>Please specify ILL link count, vendor name and link capacity</inlineHelpText>
    <label>If ILL, link count, vendor, capacity?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>