force-app/main/default/objects/Account/fields/If_VDI_present__c.field-meta.xml
<CustomField>
    <fullName>If_VDI_present__c</fullName>
    <label>If VDI present</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMWare - OnPremise</fullName>
            </value>
            <value>
                <fullName>Citrix - OnPremise</fullName>
            </value>
            <value>
                <fullName>Xen - OnPremise</fullName>
            </value>
            <value>
                <fullName>Microsoft HyperV - OnPremise</fullName>
            </value>
            <value>
                <fullName>Using Hyperscaler</fullName>
            </value>
            <value>
                <fullName>Indian Cloud Provider</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>