force-app/main/default/objects/Account/fields/If_yes_datacentre_is_in_which_city__c.field-meta.xml
<CustomField>
    <fullName>If_yes_datacentre_is_in_which_city__c</fullName>
    <label>If yes, datacentre is in which city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>