force-app/main/default/objects/Account/fields/if_yes_how_many_racks__c.field-meta.xml
<CustomField>
    <fullName>if_yes_how_many_racks__c</fullName>
    <label>if yes, how many racks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>