force-app/main/default/objects/Account/fields/if_yes_service_provide_is_in_which_city__c.field-meta.xml
<CustomField>
    <fullName>if_yes_service_provide_is_in_which_city__c</fullName>
    <label>if yes, service provide is in which city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>