force-app/main/default/objects/Account/fields/if_yes_which_provider__c.field-meta.xml
<CustomField>
    <fullName>if_yes_which_provider__c</fullName>
    <label>if yes, which provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>